--- a/index.html
+++ b/index.html
@@ -5,73 +5,92 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Scan Tiket KRK 2025</title>
   <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: 'DM Sans', sans-serif;
-      background: linear-gradient(to bottom right, #fdfbfb, #ebedee);
-      padding: 24px;
+      background: linear-gradient(to bottom right, #fcfcfc, #f0f4ff);
+      padding: 30px 16px;
       display: flex;
       flex-direction: column;
       align-items: center;
     }
 
     h1 {
-      font-size: 22px;
-      margin-bottom: 16px;
-      color: #333;
+      font-size: 24px;
+      margin-bottom: 24px;
+      color: #2c2c2c;
+      font-weight: 700;
+      text-align: center;
     }
 
     #reader {
       width: 100%;
-      max-width: 340px;
-      margin-bottom: 16px;
-      border-radius: 10px;
+      max-width: 360px;
+      border-radius: 12px;
+      box-shadow: 0 6px 16px rgba(0, 0, 0, 0.08);
+      margin-bottom: 24px;
       overflow: hidden;
     }
 
     #result {
-      white-space: pre-wrap;
-      background: #fff;
+      background: white;
+      padding: 24px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.06);
+      font-size: 15px;
       color: #333;
-      padding: 16px;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.06);
-      max-width: 340px;
+      white-space: pre-wrap;
       width: 100%;
-      margin-bottom: 16px;
+      max-width: 380px;
+      margin-bottom: 20px;
     }
 
     button {
-      background: #5f6cff;
-      color: white;
       padding: 12px 24px;
-      border: none;
-      border-radius: 6px;
       font-size: 16px;
+      background-color: #615eff;
+      color: white;
+      border: none;
+      border-radius: 8px;
       cursor: pointer;
+      transition: background-color 0.3s ease;
     }
 
     button:hover {
-      background: #4753e3;
+      background-color: #504ce3;
+    }
+
+    @media print {
+      body {
+        background: white;
+        padding: 0;
+      }
+      #reader, button, h1 {
+        display: none !important;
+      }
+      #result {
+        box-shadow: none;
+        font-size: 13pt;
+        border: none;
+        width: 100%;
+        padding: 0;
+      }
     }
   </style>
 </head>
 <body>
-
-  <h1>Scan QR Tiket KRK</h1>
+  <h1>Scan Tiket Registrasi KRK 2025</h1>
 
   <div id="reader"></div>
 
-  <div id="result">📷 Arahkan kamera ke QR Code...</div>
+  <div id="result">📷 Arahkan kamera ke QR Code peserta...</div>
 
-  <button onclick="window.print()">🖨️ Cetak</button>
+  <button onclick="window.print()">🖨️ Cetak Tiket</button>
 
   <script>
-    const resultElement = document.getElementById("result");
-
     function onScanSuccess(decodedText, decodedResult) {
-      resultElement.innerText = decodedText;
+      document.getElementById("result").innerText = decodedText;
     }
 
     const html5QrCode = new Html5Qrcode("reader");
@@ -80,7 +99,7 @@
       { fps: 10, qrbox: 250 },
       onScanSuccess
     ).catch(err => {
-      resultElement.innerText = "❌ Gagal mengakses kamera.";
+      document.getElementById("result").innerText = "❌ Gagal memulai kamera.";
       console.error(err);
     });
   </script>
