--- a/index.html
+++ b/index.html
@@ -2,106 +2,33 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Scan Tiket KRK 2025</title>
-  <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <title>QR Scanner KRK</title>
+  <script src="https://unpkg.com/html5-qrcode"></script>
   <style>
-    body {
-      font-family: 'DM Sans', sans-serif;
-      background: linear-gradient(to bottom right, #fcfcfc, #f0f4ff);
-      padding: 30px 16px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    h1 {
-      font-size: 24px;
-      margin-bottom: 24px;
-      color: #2c2c2c;
-      font-weight: 700;
-      text-align: center;
-    }
-
-    #reader {
-      width: 100%;
-      max-width: 360px;
-      border-radius: 12px;
-      box-shadow: 0 6px 16px rgba(0, 0, 0, 0.08);
-      margin-bottom: 24px;
-      overflow: hidden;
-    }
-
-    #result {
-      background: white;
-      padding: 24px;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.06);
-      font-size: 15px;
-      color: #333;
-      white-space: pre-wrap;
-      width: 100%;
-      max-width: 380px;
-      margin-bottom: 20px;
-    }
-
-    button {
-      padding: 12px 24px;
-      font-size: 16px;
-      background-color: #615eff;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-
-    button:hover {
-      background-color: #504ce3;
-    }
-
-    @media print {
-      body {
-        background: white;
-        padding: 0;
-      }
-      #reader, button, h1 {
-        display: none !important;
-      }
-      #result {
-        box-shadow: none;
-        font-size: 13pt;
-        border: none;
-        width: 100%;
-        padding: 0;
-      }
-    }
+    body { font-family: sans-serif; text-align: center; padding: 16px; }
+    #reader { width: 100%; max-width: 320px; margin: auto; }
+    #result { margin-top: 16px; white-space: pre-wrap; }
   </style>
 </head>
 <body>
-  <h1>Scan Tiket Registrasi KRK 2025</h1>
-
+  <h1>Scan Tiket KRK</h1>
   <div id="reader"></div>
-
-  <div id="result">📷 Arahkan kamera ke QR Code peserta...</div>
-
-  <button onclick="window.print()">🖨️ Cetak Tiket</button>
+  <div id="result">📷 Arahkan kamera ke QR...</div>
 
   <script>
-    function onScanSuccess(decodedText, decodedResult) {
+    function onScanSuccess(decodedText) {
       document.getElementById("result").innerText = decodedText;
+      if (typeof AndroidBridge !== "undefined") {
+        AndroidBridge.onQrScanned(decodedText);
+      }
     }
 
-    const html5QrCode = new Html5Qrcode("reader");
-    html5QrCode.start(
+    const scanner = new Html5Qrcode("reader");
+    scanner.start(
       { facingMode: "environment" },
       { fps: 10, qrbox: 250 },
       onScanSuccess
-    ).catch(err => {
-      document.getElementById("result").innerText = "❌ Gagal memulai kamera.";
-      console.error(err);
-    });
+    );
   </script>
 </body>
 </html>
