--- a/index.html
+++ b/index.html
@@ -2,33 +2,63 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <title>QR Scanner KRK</title>
-  <script src="https://unpkg.com/html5-qrcode"></script>
+  <title>Scan Tiket KRK 2025</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    body { font-family: sans-serif; text-align: center; padding: 16px; }
-    #reader { width: 100%; max-width: 320px; margin: auto; }
-    #result { margin-top: 16px; white-space: pre-wrap; }
-  </style>
-</head>
-<body>
-  <h1>Scan Tiket KRK</h1>
-  <div id="reader"></div>
-  <div id="result">📷 Arahkan kamera ke QR...</div>
-
-  <script>
-    function onScanSuccess(decodedText) {
-      document.getElementById("result").innerText = decodedText;
-      if (typeof AndroidBridge !== "undefined") {
-        AndroidBridge.onQrScanned(decodedText);
-      }
+    * {
+      box-sizing: border-box;
     }
 
-    const scanner = new Html5Qrcode("reader");
-    scanner.start(
-      { facingMode: "environment" },
-      { fps: 10, qrbox: 250 },
-      onScanSuccess
-    );
-  </script>
-</body>
-</html>
+    body {
+      margin: 0;
+      font-family: 'DM Sans', sans-serif;
+      background: linear-gradient(to bottom right, #fcfcfc, #f0f4ff);
+      padding: 24px 16px 80px;
+      overflow-x: hidden;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 22px;
+      margin-bottom: 16px;
+      font-weight: 700;
+      color: #2c2c2c;
+    }
+
+    #reader {
+      width: 100%;
+      max-width: 320px;
+      height: auto;
+      margin: 0 auto 16px auto;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+    }
+
+    #result {
+      background: white;
+      padding: 20px;
+      border-radius: 12px;
+      max-width: 340px;
+      margin: 0 auto 16px;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.06);
+      white-space: pre-wrap;
+      font-size: 15px;
+      color: #333;
+    }
+
+    button {
+      background: #5e60ce;
+      color: white;
+      padding: 14px 28px;
+      font-size: 16px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      position: fixed;
+      bottom: 16px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 999;
+      box
