--- a/index.html
+++ b/index.html
@@ -4,83 +4,73 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
   <title>Scan Tiket KRK</title>
-  <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <script src="https://unpkg.com/html5-qrcode"></script>
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
     body {
       margin: 0;
-      font-family: 'DM Sans', sans-serif;
-      background: linear-gradient(to bottom right, #fcfcfc, #f0f4ff);
-      padding: 24px 16px 80px;
-      overflow-x: hidden;
+      font-family: sans-serif;
+      background: #f5f5f5;
+      padding: 20px;
       text-align: center;
     }
 
     h1 {
-      font-size: 22px;
-      margin-bottom: 16px;
-      font-weight: 700;
-      color: #2c2c2c;
+      font-size: 20px;
+      margin-bottom: 12px;
     }
 
     #reader {
       width: 100%;
       max-width: 320px;
-      margin: 0 auto 16px auto;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+      margin: 0 auto 12px auto;
     }
 
-    #result {
+    #ticket {
       background: white;
-      padding: 20px;
-      border-radius: 12px;
-      max-width: 340px;
-      margin: 0 auto 16px;
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.06);
-      white-space: pre-wrap;
-      font-size: 15px;
-      color: #333;
+      padding: 12px;
+      width: 58mm;
+      margin: 0 auto;
+      border: 1px dashed #ccc;
+      font-size: 13px;
+      text-align: left;
+      display: none;
+    }
+
+    #ticket .title {
+      text-align: center;
+      font-weight: bold;
+      margin-bottom: 4px;
+    }
+
+    #ticket .section {
+      text-align: center;
+      font-size: 12px;
+      margin-bottom: 6px;
+    }
+
+    #ticket .field {
+      margin: 4px 0;
     }
 
     button {
+      margin-top: 12px;
+      padding: 10px 16px;
       background: #5e60ce;
       color: white;
-      padding: 14px 28px;
-      font-size: 16px;
       border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      position: fixed;
-      bottom: 16px;
-      left: 50%;
-      transform: translateX(-50%);
-      z-index: 1000;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-    }
-
-    button:hover {
-      background: #4e4ecf;
+      border-radius: 6px;
+      font-size: 14px;
     }
 
     @media print {
-      body {
-        background: white;
-        padding: 0;
-      }
-
-      #reader, button, h1 {
+      body, #reader, h1, button {
         display: none !important;
       }
 
-      #result {
-        box-shadow: none;
+      #ticket {
+        display: block;
+        width: 100%;
         border: none;
-        font-size: 14pt;
         padding: 0;
       }
     }
@@ -88,19 +78,41 @@
 </head>
 <body>
   <h1>Scan Tiket Registrasi KRK</h1>
+  <div id="reader">Memuat kamera...</div>
 
-  <div id="reader"></div>
+  <div id="ticket">
+    <div class="title">* ENTRY PASS *</div>
+    <div class="section">KRK PDPKK HKY Tasikmalaya</div>
 
-  <div id="result">📷 Arahkan kamera ke QR Code peserta...</div>
+    <div class="field">No Reg: <span id="reg">-</span></div>
+    <div class="field">Nama: <span id="nama">-</span></div>
+    <div class="field">Paroki: <span id="paroki">-</span></div>
+    <div class="field">Kota: <span id="kota">-</span></div>
+    <div class="field">No WA: <span id="wa">-</span></div>
+  </div>
 
   <button onclick="window.print()">🖨️ Cetak Tiket</button>
 
   <script>
     function onScanSuccess(decodedText) {
-      document.getElementById("result").innerText = decodedText;
+      const data = decodedText.split("|");
+      if (data.length < 5) {
+        alert("QR tidak valid. Format harus: REG|Nama|Paroki|Kota|WA");
+        return;
+      }
+
+      const [reg, nama, paroki, kota, wa] = data;
+
+      document.getElementById("reg").textContent = reg;
+      document.getElementById("nama").textContent = nama;
+      document.getElementById("paroki").textContent = paroki;
+      document.getElementById("kota").textContent = kota;
+      document.getElementById("wa").textContent = wa;
+
+      document.getElementById("ticket").style.display = "block";
 
       if (typeof AndroidBridge !== "undefined") {
-        AndroidBridge.onQrScanned(decodedText);
+        AndroidBridge.print(document.getElementById("ticket").innerHTML);
       }
     }
 
@@ -110,7 +122,7 @@
       { fps: 10, qrbox: 250 },
       onScanSuccess
     ).catch(err => {
-      document.getElementById("result").innerText = "❌ Gagal mengakses kamera.";
+      document.getElementById("reader").innerText = "❌ Kamera tidak bisa digunakan.";
       console.error(err);
     });
   </script>
