--- a/index.html
+++ b/index.html
@@ -3,128 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-  <title>Scan Tiket KRK</title>
+  <title>QR Multi-Purpose Scanner</title>
   <script src="https://unpkg.com/html5-qrcode"></script>
-  <style>
-    body {
-      margin: 0;
-      font-family: sans-serif;
-      background: #f5f5f5;
-      padding: 20px;
-      text-align: center;
-    }
-
-    h1 {
-      font-size: 20px;
-      margin-bottom: 12px;
-    }
-
-    #reader {
-      width: 100%;
-      max-width: 320px;
-      margin: 0 auto 12px auto;
-    }
-
-    #ticket {
-      background: white;
-      padding: 12px;
-      width: 58mm;
-      margin: 0 auto;
-      border: 1px dashed #ccc;
-      font-size: 13px;
-      text-align: left;
-      display: none;
-    }
-
-    #ticket .title {
-      text-align: center;
-      font-weight: bold;
-      margin-bottom: 4px;
-    }
-
-    #ticket .section {
-      text-align: center;
-      font-size: 12px;
-      margin-bottom: 6px;
-    }
-
-    #ticket .field {
-      margin: 4px 0;
-    }
-
-    button {
-      margin-top: 12px;
-      padding: 10px 16px;
-      background: #5e60ce;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      font-size: 14px;
-    }
-
-    @media print {
-      body, #reader, h1, button {
-        display: none !important;
-      }
-
-      #ticket {
-        display: block;
-        width: 100%;
-        border: none;
-        padding: 0;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Scan Tiket Registrasi KRK</h1>
-  <div id="reader">Memuat kamera...</div>
+  <h1>Multi QR Scanner</h1>
+  <div id="reader">📷 Menunggu kamera aktif...</div>
+  <div id="result" class="box">📦 Belum ada hasil</div>
+  <button onclick="window.print()">🖨️ Cetak</button>
 
-  <div id="ticket">
-    <div class="title">* ENTRY PASS *</div>
-    <div class="section">KRK PDPKK HKY Tasikmalaya</div>
-
-    <div class="field">No Reg: <span id="reg">-</span></div>
-    <div class="field">Nama: <span id="nama">-</span></div>
-    <div class="field">Paroki: <span id="paroki">-</span></div>
-    <div class="field">Kota: <span id="kota">-</span></div>
-    <div class="field">No WA: <span id="wa">-</span></div>
-  </div>
-
-  <button onclick="window.print()">🖨️ Cetak Tiket</button>
-
-  <script>
-    function onScanSuccess(decodedText) {
-      const data = decodedText.split("|");
-      if (data.length < 5) {
-        alert("QR tidak valid. Format harus: REG|Nama|Paroki|Kota|WA");
-        return;
-      }
-
-      const [reg, nama, paroki, kota, wa] = data;
-
-      document.getElementById("reg").textContent = reg;
-      document.getElementById("nama").textContent = nama;
-      document.getElementById("paroki").textContent = paroki;
-      document.getElementById("kota").textContent = kota;
-      document.getElementById("wa").textContent = wa;
-
-      document.getElementById("ticket").style.display = "block";
-
-      if (typeof AndroidBridge !== "undefined") {
-        AndroidBridge.print(document.getElementById("ticket").innerHTML);
-      }
-    }
-
-    const scanner = new Html5Qrcode("reader");
-    scanner.start(
-      { facingMode: "environment" },
-      { fps: 10, qrbox: 250 },
-      onScanSuccess
-    ).catch(err => {
-      document.getElementById("reader").innerText = "❌ Kamera tidak bisa digunakan.";
-      console.error(err);
-    });
-  </script>
+  <script src="script.js?v=multi"></script>
 </body>
 </html>
